package fr.afpa.backend.entity;

public enum RoleUtilisateur {
    ADMIN,
    ENSEIGNANT,
    RESPONSABLE
}